--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = 'Argentina',\n",
+    " 'Mexico',\n",
+    " 'USA',\n",
+    " 'Morocco'\n",
     "kindof_neighbors"
    ]
   },
