--- a/index.ipynb
+++ b/index.ipynb
@@ -210,14 +210,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina', 'Mexico', 'USA', 'Morocco']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = 'Argentina',\n",
+    "kindof_neighbors = ['Argentina',\n",
     " 'Mexico',\n",
     " 'USA',\n",
-    " 'Morocco'\n",
+    " 'Morocco']\n",
     "kindof_neighbors"
    ]
   },
